gap fixing

--- a/frontend/src/pages/HomePage.module.css
+++ b/frontend/src/pages/HomePage.module.css
@@ -97,9 +97,7 @@
 }
 .socials-container {
   display: flex; /* Arrange icons in a row */
-  justify-content: space-evenly; /* Center them horizontally */
-  gap: 5rem; /* Add space between icons */
-  margin-top: 1rem;
+  justify-content: space-around; /* Center them horizontally */
 }
 
 .socialIcon:link,
